# applicant

./: .env.example  .gitignore  CODEBASE_SUMMARY.md  Makefile  README.md  README_codewalk.txt  TODO.txt  __init__.py  alembic.ini  log_forwarder.py  pyproject.toml  start-servers.sh  start-unified.sh
data/: do-not-apply.txt  test_job_desc1.txt
frontend/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: NewApplication.tsx  RunTable.tsx
frontend/src/components/ui/: toast.tsx  toaster.tsx
frontend/src/hooks/: useBackendHealth.ts  useWebSocket.ts
frontend/src/types/: api.ts
migrations/: env.py
prompts/: form_parser.txt  llm_answer.txt  ui_and_db.txt
src/automation/: __init__.py  browser.py  example_flow.py
src/backend/: __init__.py  app.py
src/backend/api/: console.py  runs.py  users.py
src/backend/database/: connection.py  repository.py  schema.sql
src/backend/models/: __init__.py  entities.py
src/backend/services/: playwright_service.py
src/backend/websocket/: handlers.py
src/webbot/: __init__.py  ai_search.py  apply_finder.py  browser.py  browser_profiles.py  cli.py  config.py  extract.py  google_drive.py  profiles.py  resume_alignment.py  struct_extract.py  tracing.py  user_profiles.py
src/webbot/agents/: find_apply_page.py  find_apply_page_gpt5.py  find_apply_page_gpt5beta.py
src/webbot/forms/: __init__.py  answerer.py  executor.py  extractor.py  schema.py  snapshot.py  snapshot_loader.py
tests/: test_backend.py  test_cli_smoke.py  test_example.py  test_form_extractor_snapshot.py  test_form_fixtures.py  test_profiles.py  test_snapshot_loader.py
tests/fixtures/: ats_happy_path.html  no_upload.html
tests/fixtures/realworld/ashby-infisical-direct/initial/: dom.html  frame-0-0-dom.html  frame-0-0.html  frame-0-dom.html  frame-0.html  manifest.json  page.html
tests/fixtures/realworld/ashby-infisical-jd/after_apply/: dom.html  frame-0-dom.html  frame-0.html  manifest.json  page.html
tests/fixtures/realworld/ashby-infisical-jd/initial/: dom.html  frame-0.html  manifest.json
tests/fixtures/realworld/ashby-optery/after_apply/: frame-0-0-0-dom.html  frame-0-0-dom.html  frame-0-1-0-dom.html  manifest.json
tests/fixtures/realworld/ashby-optery/initial/: frame-0-0-0.html  frame-0-0.html  frame-0-1-0.html  frame-0-1-dom.html  frame-0-dom.html  page.html
tests/fixtures/realworld/greenhouse-thalamus/after_apply/: dom.html  frame-0-0-dom.html  frame-0-0.html  frame-0-1.html  frame-0-dom.html  frame-0.html  manifest.json  page.html
tests/fixtures/realworld/greenhouse-thalamus/initial/: dom.html  frame-0-1-dom.html  frame-0-dom.html  frame-0.html  manifest.json  page.html
user_profiles/NewUser/: secrets.json
(+95 files in other folders)
